# simulator

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  Common.h  IControlAlgorithm.h  LuaControlAlgorithm.cpp  LuaControlAlgorithm.h  Makefile  README.md  camera-simulator  camera-simulator.cbp  camera-simulator_automoc.cpp  camera_simulator.cc  camera_simulator.h  camerasimulator.cpp  camerasimulator.h  cmake_install.cmake  common.h  config.h.template  control_algorithm.cc  control_algorithm.h  global_renderer.cc  global_renderer.h  logger.cc  logger.h  main.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_camerasimulator.cpp  moc_mainwindow.cpp  physics_simulation.cc  physics_simulation.h  qlogger.cс  qlogger.h  simulation_runner.cc  simulation_runner.h  ui_mainwindow.h  (+2 more)
doc/: Doxyfile
doc/uml/: README  class.uxf  use-case.uxf
lua/: dummy_algorithm.lua  pid.lua  simple_algorithm.lua
models/: saw.dae
models-src/: bridge.blend  saw.blend  start.blend  washboard.blend1  washboard.blend2
models-src/new models/: bridge.blend  bridge.blend1  bridge.mesh.xml  car_body.blend  car_body.blend1  car_body.blend2  car_body2.blend1  crossing.blend1  line.blend  saw.blend  saw.blend1  saw.blend2  saw.material  saw.mesh  start.mesh.xml  turn.mesh.xml  wheel_h.blend  wheel_r.blend  wheel_r.blend1  wheel_r.blend2  wheels.blend
models-src/new models/ogre/: CarM.material  bridge.mesh.xml  car_body.mesh  car_body.mesh.xml  car_body.skeleton.xml  crossing.material  crossing.mesh  crossing.mesh.xml  line.material  line.mesh  line.mesh.xml  saw.material  saw.mesh  saw.mesh.xml  start.material  start.mesh  start.mesh.xml  turn.material  turn.mesh  turn.mesh.xml  washboard.mesh.xml  wheel_r.mesh  wheel_r.mesh.xml
models-src/ogre/: bridge.mesh  washboard.mesh
resources/: gui.qml  resources.qrc  ui.qml
resources/bullet/: hill.bullet  sphere.bullet  tile.bullet
resources/bullet/sources/: hill.blend  line-tile.blend  sphere.blend
resources/gui/GUI/: MenuStrip.qml  PhysicsSetting.qml  SettingsPanel.qml  qmldir
resources/materials/: CarM.material  crossing.material  ground.material  line.material  saw.material  start.material  turn.material
resources/meshes/: bridge.mesh  car_body.skeleton  crossing.mesh  line.mesh  saw.mesh  start.mesh  turn.mesh  washboard.mesh
resources/model_sources/: bridge.blend  crossing.blend  line.blend  turn.blend  washboard.blend
resources/model_sources/new_models/: bridge.blend2  car_body2.blend  car_body3.blend  crossing.blend  saw.blend  saw.blend2  start.blend  start.blend1  turn.blend1  washboard.blend  washboard.blend1  wheel_r.blend
resources/model_sources/new_models/ogre/: car_body.mesh  car_body.mesh.xml  crossing.mesh.xml  line.material  start.material  turn.material  wheel_h.mesh  wheel_h.mesh.xml
resources/model_sources/new_models/ogre/new_body/: CarM.material  car_body.mesh  car_body.mesh.xml  car_body.skeleton  car_body.skeleton.xml
resources/models/: line.dae  turn.dae
resources/physics_models/: tile.blend  tile.dae
resources/tiles/: crossing-tile.blend  line-tile.blend  saw-tile.blend  start-tile.blend  turn-tile.blend
resources/tiles/collada/: crossing.dae  start.dae
resources/tracks/: drop-test.xml  loop.xml  simple-circle.xml
src/: CMakeLists.txt  asset.cc  asset.h  asset_factory.cc  asset_factory.h  asset_manager.cc  asset_manager.h  camera_simulator.cc  camera_simulator.h  car3d.cc  car3d.h  common.h  config.h.template  control_algorithm.cc  control_algorithm.h  global_renderer.cc  global_renderer.h  gui_controller.cc  gui_controller.h  linescan_camera.cc  linescan_camera.h  logger.cc  logger.h  main.cc  mesh_manager.cc  mesh_manager.h  physics_simulation.cc  physics_simulation.h  property.cc  property.h  property_model.cc  property_model.h  scene.cc  scene.h  simulation_runner.cc  simulation_runner.h  trimesh_data_manager.cc  trimesh_data_manager.h  user_settings.h  util.h  (+4 more)
track/: track.xml
